--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required(VERSION 2.8)
 add_definitions("-Wall")
 include_directories(${SDL2_INCLUDE_DIR})
 
-add_executable(sixprend main.c Game/init.c Game/login.c Game/inc.c Game/menu.c Game/mode.c Game/game.c Game/stat.c)
+add_executable(sixprend main.c Game/init.c Game/login.c Game/inc.c Game/menu.c Game/mode.c Game/game.c Game/stat.c GUI/textBox.c )
 install(TARGETS sixprend DESTINATION bin)
 target_link_libraries(sixprend -lSDL2 -lSDL2_ttf)
